--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xorg-server (2:1.5.99.1-0.oi1) asimov; urgency=low
+xorg-server (2:1.5.99.1~1.3.99.0+2733+ga39377c-0.oi1) asimov; urgency=low
 
   * OpenInkpot build.
 
