--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xorg-server (2:1.5.99.1~1.3.99.0+2733+ga39377c-0.oi4) unstable; urgency=low
+
+  * Removed SIGIO handler for kdrive to avoid losing events on resume
+    after suspend.
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Fri, 03 Oct 2008 14:40:35 +0700
+
 xorg-server (2:1.5.99.1~1.3.99.0+2733+ga39377c-0.oi3) asimov; urgency=low
 
   * Restored patch for server-1.4: stop mucking with APM and console
