--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,11 @@
-xorg-server (2:1.5.99.1~1.3.99.0+2733+ga39377c-0.oi4) unstable; urgency=low
+xorg-server (2:1.5.99.1~1.3.99.0+2733+ga39377c-0.oi5) asimov; urgency=low
+
+  * Added missing Build-Depends for various x11proto.
+  * Added patch disabling cursor completely if -nocursor is specified.
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Mon, 06 Oct 2008 03:16:51 +0700
+
+xorg-server (2:1.5.99.1~1.3.99.0+2733+ga39377c-0.oi4) asimov; urgency=low
 
   * Removed SIGIO handler for kdrive to avoid losing events on resume
     after suspend.
