--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xorg-server (2:1.6.0-1) asimov; urgency=low
+
+  * New upstream release.
+  * First build for IPlinux.
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Sun, 15 Mar 2009 15:21:01 +0600
+
 xorg-server (2:1.5.99.1~1.3.99.0+2733+ga39377c-0.oi5) asimov; urgency=low
 
   * Added missing Build-Depends for various x11proto.
