--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xorg-server (2:1.6.0-3) asimov; urgency=low
+
+  * Fixed libsha1 dependency.
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Sun, 15 Mar 2009 20:11:53 +0600
+
 xorg-server (2:1.6.0-1) asimov; urgency=low
 
   * New upstream release.
