--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xorg-server (2:1.6.0-5+b1) asimov; urgency=low
+
+  * Rebuild for new toolchain.
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Fri, 03 Apr 2009 18:19:42 +0700
+
 xorg-server (2:1.6.0-5) asimov; urgency=low
 
   * Bumped upper limit of keysyms in kdrive evdev driver to allow new
